# torrenttools

./: .buildinfo  .dockerignore  .gitignore  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Dockerfile  LICENSE  Makefile  README.md  cmake_install.cmake  comparison.html  configuration.html  dagger.cue  genindex.html  index.html  named-trackers.html  objects.inv  search.html  searchindex.js  vcpkg-configuration.json  vcpkg.json  why-torrenttools.html
.doctrees/: comparison.doctree  configuration.doctree  environment.pickle  index.doctree  named-trackers.doctree  why-torrenttools.doctree
.doctrees/commands/: create.doctree  edit.doctree  info.doctree  magnet.doctree  pad.doctree  show.doctree  verify.doctree
.doctrees/topics/: bencode.doctree  bittorrent-metafile-v1.doctree  glossary.doctree
.github/: FUNDING.yml
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  documentation.yml  linux.yml  macos.yml  package-deb.yml  package-release-windows.yml  package.yml  release.yml  windows.yml
_sources/: configuration.rst.txt  index.rst.txt
_sources/commands/: create.rst.txt  show.rst.txt  verify.rst.txt
_sources/topics/: bittorrent-metafile-v1.rst.txt
benchmark/: benchmark.csv  benchmark.ipynb  benchmark.sh
cmake/: FindISALCrypto.cmake  FindNASM.cmake  FindSphinx.cmake  FindTBB.cmake  SanitizersConfig.cmake  mingw64-x86_64.cmake
cmake/toolchains/: x64-linux-clang-toolchain.cmake
cmake/triplets/: x64-linux-clang.cmake
commands/: create.html  edit.html  info.html  magnet.html  pad.html  show.html  verify.html
debian/: changelog  control  copyright  rules
docs/: CMakeLists.txt  CTestTestfile.cmake  Makefile  bep-support.csv  cmake_install.cmake  comparison.rst  conf.py  conf.py.in  configuration.rst  index.html  index.rst  named-trackers.rst  why-torrenttools.rst
docs/commands/: create.rst  edit.rst  info.rst  magnet.rst  pad.rst  show.rst
docs/sphinx/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/sphinx/.doctrees/: environment.pickle  index.doctree
docs/topics/: bencode.rst  bittorrent-metafile-v1.rst  glossary.rst
include/: app_data.hpp  argument_parsers.hpp  cli_helpers.hpp  common.hpp  config.hpp  config.hpp.in  config_parser.hpp  create.hpp  edit.hpp  escape_binary_fields.hpp  exceptions.hpp  file_matcher.hpp  formatters.hpp  help_formatter.hpp  indicator.hpp  info.hpp  list_edit_mode.hpp  ls_colors.hpp  magnet.hpp  main_app.hpp  natural_sort.hpp  pad.hpp  profile.hpp  profile_config_formatter.hpp  progress.hpp  query.hpp  show.hpp  tracker_database.hpp  tree_view.hpp  utils.hpp  verify.hpp
resources/: config.yaml  config.yml  trackers.json
scripts/: fetch_dependencies.sh
src/: app_data.cpp  argument_parsers.cpp  common.cpp  config_parser.cpp  create.cpp  edit.cpp  escape_binary_fields.cpp  formatters.cpp  indicator.cpp  info.cpp  ls_colors.cpp  magnet.cpp  main.cpp  main_app.cpp  pad.cpp  profile.cpp  progress.cpp  show.cpp  tracker_database.cpp  tree_view.cpp  verify.cpp
tests/: CMakeLists.txt  main.cpp  test_create.cpp  test_edit.cpp  test_file_matcher.cpp  test_info.cpp  test_ls_colors.cpp  test_magnet.cpp  test_main.cpp  test_pad.cpp  test_profile.cpp  test_resources.hpp  test_show.cpp  test_tracker_database.cpp  test_tree_view.cpp  test_utils.cpp  test_verify.cpp
tests/private.torrent/: test_file.txt.torrent
tests/resources/: CAMELYON17.torrent.reference.torrent  CAMELYON17.torrent.torrent  checksums.torrent  collection.torrent  dht-node.torrent  http-seeds.torrent  lorem_ipsum.txt  private.torrent  resources-hybrid.torrent  resources.torrent  similar-v1.torrent  similar-v2.torrent  tests.torrent  tree_index_test.torrent  web-seed.torrent
tests/resources/config/: config.yml  trackers.json
topics/: bencode.html  bittorrent-metafile-v1.html  glossary.html
